src/test/deca/context/invalid/renduInitial/02doubledecl.res
/user/1/.base/lennea/home/Projet_GL/src/test/deca/context/invalid/renduInitial/02doubledecl.deca:2:0: mismatched input '\t' expecting {'println', 'print', IDENT, '}'}
